# neural-operator-foundation-lab

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ADVANCED_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_VALIDATION_REPORT.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  GITHUB_WORKFLOWS.md  GLOBAL_FEATURES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_GUIDE.md  PRODUCTION_READINESS_REPORT.md  PROJECT_CHARTER.md  QISA_RESEARCH_REPORT.md  README.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  autonomous_validation_results.json  autonomous_validation_runner.py  comprehensive_autonomous_validation.py  comprehensive_quality_gates.py  comprehensive_security_fix.py  comprehensive_test_suite.py  (+58 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.terragon/: IMPLEMENTATION_SUMMARY.md  autonomous-executor.py  backlog.json  config.yaml  metrics-collector.py  run-autonomous-cycle.py  value-discovery.py
.terragon/metrics/: latest.json  metrics_2025-08-01_17-25-13.json  metrics_2025-08-01_17-25-52.json
deployment/aws/cloudformation/: neural-operator-infrastructure.yaml
deployment/configs/: production.yaml
deployment/docker/: Dockerfile  Dockerfile.cpu  docker-compose.yml
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  rbac.yaml  service.yaml
deployment/production/: autonomous_deployment_orchestrator.py  deployment_result.json
deployment/scripts/: deploy.sh
docs/: AUTONOMOUS_WORKFLOWS.md  DEPLOYMENT.md  GITHUB_WORKFLOWS.md  PROGRESSIVE_QUALITY_GATES.md  README.md  ROADMAP.md  SETUP_REQUIRED.md  TERRAGON_QUANTUM_RESEARCH_SUMMARY.md  TESTING.md
docs/adr/: 0001-neural-operator-architecture-choice.md  template.md
docs/api/: cli.md  comprehensive_reference.md  models.md  training.md
docs/guides/: developer-guide.md  monitoring.md  performance.md  user-guide.md
docs/workflows/: CI_CD_SETUP.md
docs/workflows/examples/: ci.yml  performance.yml  release.yml  security.yml
examples/: README.md  advanced_physics_simulation.py  basic_fno_example.py  qisa_demo.py  quick_start_foundation.py  transformer_neural_operator_demo.py  tutorial_neural_operators.py
experiment_results/: 0a3585b837ed.json  11fb268d9588.json  9aac8f446240.json  a42c2f178f24.json  af6b87ff9af4.json  ba4b9ea036fb.json  c9effc46531f.json  d470e9412dcc.json  d7e48b75386c.json  e5c6d42659b6.json  e624941183b6.json  f047a09a9c4d.json
experiment_results/0a3585b837ed/trials/: 0a3585b837ed_trial_0.json  0a3585b837ed_trial_1.json  0a3585b837ed_trial_2.json  0a3585b837ed_trial_3.json  0a3585b837ed_trial_4.json  0a3585b837ed_trial_5.json  0a3585b837ed_trial_6.json  0a3585b837ed_trial_7.json  0a3585b837ed_trial_8.json  0a3585b837ed_trial_9.json
experiment_results/11fb268d9588/trials/: 11fb268d9588_trial_0.json  11fb268d9588_trial_1.json  11fb268d9588_trial_2.json  11fb268d9588_trial_3.json  11fb268d9588_trial_4.json
experiment_results/9aac8f446240/trials/: 9aac8f446240_trial_0.json  9aac8f446240_trial_1.json  9aac8f446240_trial_2.json  9aac8f446240_trial_3.json  9aac8f446240_trial_4.json
experiment_results/a42c2f178f24/trials/: a42c2f178f24_trial_0.json  a42c2f178f24_trial_1.json  a42c2f178f24_trial_2.json  a42c2f178f24_trial_3.json  a42c2f178f24_trial_4.json  a42c2f178f24_trial_5.json  a42c2f178f24_trial_6.json  a42c2f178f24_trial_7.json  a42c2f178f24_trial_8.json  a42c2f178f24_trial_9.json
experiment_results/af6b87ff9af4/trials/: af6b87ff9af4_trial_0.json  af6b87ff9af4_trial_1.json  af6b87ff9af4_trial_2.json  af6b87ff9af4_trial_3.json  af6b87ff9af4_trial_4.json
experiment_results/ba4b9ea036fb/trials/: ba4b9ea036fb_trial_0.json  ba4b9ea036fb_trial_1.json  ba4b9ea036fb_trial_2.json  ba4b9ea036fb_trial_3.json  ba4b9ea036fb_trial_4.json  ba4b9ea036fb_trial_5.json  ba4b9ea036fb_trial_6.json  ba4b9ea036fb_trial_7.json  ba4b9ea036fb_trial_8.json  ba4b9ea036fb_trial_9.json
experiment_results/c9effc46531f/trials/: c9effc46531f_trial_0.json  c9effc46531f_trial_1.json  c9effc46531f_trial_2.json  c9effc46531f_trial_3.json  c9effc46531f_trial_4.json  c9effc46531f_trial_5.json  c9effc46531f_trial_6.json  c9effc46531f_trial_7.json  c9effc46531f_trial_8.json  c9effc46531f_trial_9.json
experiment_results/d470e9412dcc/trials/: d470e9412dcc_trial_0.json  d470e9412dcc_trial_1.json  d470e9412dcc_trial_2.json  d470e9412dcc_trial_3.json  d470e9412dcc_trial_4.json
experiment_results/d7e48b75386c/trials/: d7e48b75386c_trial_0.json  d7e48b75386c_trial_1.json  d7e48b75386c_trial_2.json  (+7 more)
neural_env/: pyvenv.cfg
qisa_env/: pyvenv.cfg
research/: qisa_experimental_framework.py  qisa_validation_report.md
scripts/: run_progressive_quality_gates.py  setup_dev.sh
src/neural_operator_lab/: __init__.py  base.py  config.py  config_manager.py  experiment_runner.py  intelligent_cache.py  performance_optimizer.py  research_framework.py  robust_framework.py  utils.py  validation.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_qisa_comprehensive.py
tests/end_to_end/: __init__.py  test_complete_workflow.py
tests/fixtures/: __init__.py  test_data_generator.py
tests/integration/: __init__.py  test_training_pipeline.py
tests/performance/: __init__.py  test_benchmarks.py
tests/quality_gates/: __init__.py  test_autonomous_validation.py  test_progressive_gates.py  test_research_quality_gates.py
tests/unit/: __init__.py  test_adaptive_operators.py  test_augmentation.py  test_callbacks.py  test_config.py  test_data_loaders.py  test_distributed.py  test_geometric_operators.py  test_models.py  test_neural_operators.py  test_physics_informed_operators.py  test_security.py
(+118 files in other folders)
